<resources>
    <string name="app_name">HomeWork_2_3</string>
    <string name="ac">AC</string>
    <string name="plus">+</string>
    <string name="percentage">%</string>
    <string name="minus_plus">-/+</string>
    <string name="divide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="minus">-</string>
    <string name="eight">8</string>
    <string name="five">5</string>
    <string name="_9">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="explore_the_nightlife_of_your_city">Explore the nightlife of your city</string>
    <string name="free">Free</string>
    <string name="price">Price💰</string>
    <string name="participants">Participants</string>
    <string name="accessibility">Accessibility</string>
    <string name="pr">Price</string>
    <string-array name="category_types">
        <item>Type</item>
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
</resources>