<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:backgroundTint="@color/orange"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/hsv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:padding="24dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/general_ll">
        <TextView
            android:id="@+id/tv_result"
            android:textSize="100sp"
            android:text="@string/zero"
            android:layout_gravity="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </HorizontalScrollView>



    <LinearLayout
        android:id="@+id/general_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:padding="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Gray.Button"
                android:text="@string/ac"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus_minus"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/minus_plus"

                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                android:layout_marginEnd="18dp"
                style="@style/Gray.Button"
                android:text="@string/percentage"

                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                android:text="@string/divide"
                style="@style/Orange.Button"
                />

        </LinearLayout>
        <LinearLayout
            android:padding="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/DarkGray.Button"
                android:text="@string/seven" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/DarkGray.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/_9" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Orange.Button"
                android:text="@string/multiply"

                />

        </LinearLayout>
        <LinearLayout
            android:padding="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/DarkGray.Button"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/DarkGray.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/six"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/minus"
                />

        </LinearLayout>
        <LinearLayout
            android:padding="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/DarkGray.Button"
                android:text="@string/one"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/two"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/DarkGray.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/three"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:text="@string/plus"
                />

        </LinearLayout>
        <LinearLayout
            android:padding="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:insetTop="0dp"
                android:padding="0dp"
                android:textAlignment="textStart"
                android:paddingStart="24dp"
                android:textColor="@color/white"
                android:text="@string/zero"
                android:textSize="28sp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/dark_gray"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/dot"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"
                android:text="@string/equal"
                />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>