<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/dark_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="24dp"
        android:padding="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp">
                <ImageView
                    android:id="@+id/blue_heart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:cornerRadius="0dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_blue_heart"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_ex"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/heart_pink"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    app:cornerRadius="0dp"
                    android:paddingTop="20dp"
                    android:drawableTop="@drawable/heart_pink"
                    android:backgroundTint="@color/pink"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_ex"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_category"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:textSize="16sp"
                    android:padding="0dp"
                    android:text="@string/category"
                    android:layout_margin="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:backgroundTint="@color/pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/tv_ex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore_the_nightlife_of_your_city"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="24dp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/btn_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/tv_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_ex"
                    android:layout_marginTop="32dp"
                    android:text="@string/free"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/ll_circles"
                    app:layout_constraintBottom_toTopOf="@id/tv_price"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="10sp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="@id/tv_free"
                    app:layout_constraintTop_toBottomOf="@id/tv_free"
                    app:layout_constraintStart_toStartOf="@id/tv_free"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:id="@+id/ll_circles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_participants"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_ex"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_one_user"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_two_users"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_three_users"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/user_icon"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/tv_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participants"
                    android:textSize="10sp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_circles"
                    app:layout_constraintStart_toStartOf="@id/ll_circles"
                    app:layout_constraintEnd_toEndOf="@id/ll_circles"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <View
                    android:id="@+id/v_acc"
                    android:layout_width="80dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/view_acc"
                    app:layout_constraintStart_toEndOf="@id/ll_circles"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_ex"
                    app:layout_constraintBottom_toTopOf="@id/tv_acc"/>
                <TextView
                    android:id="@+id/tv_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessibility"
                    android:layout_marginBottom="16dp"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@id/v_acc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/v_acc"
                    app:layout_constraintTop_toBottomOf="@id/v_acc"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/purple"
        android:text="@string/next"
        app:cornerRadius="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_category"
        app:layout_constraintTop_toBottomOf="@id/cv_main"
        />
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintBottom_toTopOf="@id/spinner_category_type"
        app:layout_constraintStart_toStartOf="@id/spinner_category_type"/>
    <Spinner
        android:id="@+id/spinner_category_type"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/frame_options"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        />
    <TextView
        android:id="@+id/tv_price_sl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/pr"
        android:textSize="12sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="@id/price_range_slider"
        app:layout_constraintBottom_toTopOf="@id/price_range_slider"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/price_range_slider"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/spinner_category_type"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintStart_toEndOf="@id/spinner_category_type"
        />
    <TextView
        android:id="@+id/tv_acc_sl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/accessibility"
        android:textSize="12sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/price_range_slider"
        app:layout_constraintTop_toBottomOf="@id/price_range_slider"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/acc_range_slider"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_acc_sl"
        app:layout_constraintStart_toEndOf="@id/spinner_category_type"
        />

</androidx.constraintlayout.widget.ConstraintLayout>